<resources>
    <string name="app_name">Android Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="music_on_off">Music ON/OFF</string>
    <string name="to_the_moon_studios_presents">To The Moon Studios Presents:</string>
    <string name="the_concentration_app">The Concentration App</string>
    <string name="todo">TODO</string>
    <string name="try_again">Try Again</string>
    <string name="new_game">New Game</string>
    <string name="end_game">End Game</string>
    <string name="return_to_menu">Return To Menu</string>
    <string name="concentration">Concentration</string>
    <string name="play">Play</string>
    <string name="how_many_cards_this_game">How many cards this game?</string>
    <string name="please_enter_an_even_number_4_20">Please enter an even number, 4-20</string>
    <string name="how_many_cards">How many cards?</string>
    <string name="start">Start</string>
    <string name="highscores">Highscores</string>
    <string name="even_number_4_20">Even number, 4-20</string>
    <string name="credits">Credits</string>
    <string name="brandon_moya_014186939">Brandon Moya, 014186939</string>
    <string name="menu">menu</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="justin_ho_014574794">Justin Ho, 014574794</string>
    <string name="david_tran_011813529">David Tran, 011813529</string>
    <string name="score">Score</string>
    <string name="end">End</string>
    <string name="ishan_dhaliwal_01330497">Ishan Dhaliwal, 01330497</string>
    <string name="high_scores">High Scores</string>

</resources>